# AppOpsManager

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/keystore/: release
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cmd.txt  starter.sh  startercmd.txt
app/src/main/cpp/: CMakeLists.txt  binder_api.cpp  nativelib.cpp
app/src/main/cpp/binder/: binder.cpp  binder.h
app/src/main/res/color/: btn_ripple_color.xml
app/src/main/res/drawable/: bg_actionbar.xml  bg_app_icon_blank.xml  bg_corner.xml  bg_uid_mode_flag.xml  ic_arrow_back.xml  ic_kill_server.xml  ic_search.xml  ic_settings_open.xml  ic_terminal.xml  ripple_list_item_selected.xml
app/src/main/res/layout/: activity_app.xml  activity_app_detail.xml  activity_app_ops.xml  activity_app_ops_info.xml  activity_app_perms.xml  activity_guide.xml  activity_home.xml  activity_main.xml  activity_settings.xml  activity_termainal.xml  dialog_app_op_detail.xml  item_app.xml  item_app_list.xml  item_app_op.xml  item_app_perms.xml  item_appops_info_list.xml  preference_appops_item.xml
app/src/main/res/menu/: menu.xml  menu_app_settings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
framework-api/: build.gradle  consumer-rules.pro  proguard-rules.pro
framework_api/: build.gradle  consumer-rules.pro
gradle/wrapper/: gradle-wrapper.properties
server/: build.gradle  consumer-rules.pro
server/src/main/: AndroidManifest.xml
server/src/main/assets/: cmd.txt  start.sh  starter.sh
server/src/main/cpp/: CMakeLists.txt  server.cpp
(+189 files in other folders)
